[gd_scene load_steps=8 format=3 uid="uid://c52fth8a6brwp"]

[ext_resource type="Script" path="res://scripts/tool_templates.gd" id="1_4sj5k"]
[ext_resource type="Script" path="res://scripts/tag_list_script.gd" id="1_extqk"]
[ext_resource type="Theme" uid="uid://ddak63y6lwxsp" path="res://theme/auto_fill.tres" id="3_v5p41"]

[sub_resource type="GDScript" id="GDScript_a4o42"]
resource_name = "autofill"
script/source = "extends LineEdit


@onready var timer: Timer = $Timer
@onready var auto_fill: ItemList = $VBoxContainer/AutoFill
@onready var auto_container = $VBoxContainer



func _ready():
	timer.wait_time = Tagger.AUTOFILL_TIME
	timer.autostart = false
	timer.one_shot = true
	text_changed.connect(on_text_changed)
	timer.timeout.connect(on_timer_ended)
	focus_exited.connect(on_focus_lost)
	text_submitted.connect(on_text_submitted)
	auto_fill.item_submited.connect(on_list_item_submit)


func on_list_item_submit(tag_submited: String) -> void:
	text_submitted.emit(tag_submited)
	clear()


func on_text_submitted(_ignored: String) -> void:
	if not timer.is_stopped():
		timer.stop()


func on_focus_lost() -> void:
	await get_tree().process_frame # Wait to see who grabs focus
	if not auto_fill.has_focus() and auto_container.visible:
		auto_container.hide()


func on_text_changed(_ignored: String) -> void:
	if not Tagger.autofill_enabled:
		return
	
	if auto_container.visible:
		auto_container.hide()
	
	timer.start()


func on_timer_ended() -> void:
	var tag_to_search: String = text.strip_edges().to_lower()
	if tag_to_search.is_empty():
		auto_fill.clear()
		return
	
	var tags_found: Array[String] = Tagger.search_local(tag_to_search, 10)
	
	auto_fill.clear()

	for item in tags_found:
		auto_fill.add_item(item)
	
	if 0 < tags_found.size():
		auto_container.show()


func _gui_input(event):
	if has_focus() and event.is_action(\"ui_up\") and 0 < auto_fill.item_count:
		auto_container.show()
		auto_fill.select(auto_fill.item_count - 1)
		auto_fill.grab_focus()

"

[sub_resource type="GDScript" id="GDScript_uypqb"]
resource_name = "template_autofill"
script/source = "extends ItemList


signal item_submited(item_text: String)


@onready var add_tag: LineEdit = $\"../..\"
@onready var container = $\"..\"


func _ready():
	container.hide()
	focus_exited.connect(on_focus_exited)
	item_clicked.connect(on_item_clicked)
	item_activated.connect(on_item_activated)


# Called when the node enters the scene tree for the first time.
func _gui_input(_event):
	if has_focus() and Input.is_action_just_pressed(\"ui_focus_next\") and is_anything_selected():
		add_tag.text = get_item_text(
			get_selected_items()[0]
		)
		add_tag.caret_column = add_tag.text.length()


func on_item_clicked(index: int, _at_position: Vector2, mouse_button_index: int):
	if mouse_button_index == MOUSE_BUTTON_LEFT:
		item_submited.emit(get_item_text(index))


func on_item_activated(item_index: int) -> void:
	item_submited.emit(get_item_text(item_index))
	add_tag.grab_focus()


func on_focus_exited():
	container.hide()
"

[sub_resource type="GDScript" id="GDScript_aj43q"]
resource_name = "template_sug_autofill"
script/source = "extends LineEdit


@onready var timer: Timer = $Timer
@onready var auto_fill: ItemList = $VBoxContainer/AutoFill
@onready var auto_container = $VBoxContainer



func _ready():
	timer.wait_time = Tagger.AUTOFILL_TIME
	timer.autostart = false
	timer.one_shot = true
	text_changed.connect(on_text_changed)
	timer.timeout.connect(on_timer_ended)
	focus_exited.connect(on_focus_lost)
	text_submitted.connect(on_text_submitted)
	auto_fill.item_submited.connect(on_list_item_submit)


func on_list_item_submit(tag_submited: String) -> void:
	text_submitted.emit(tag_submited)
	clear()


func on_text_submitted(_ignored: String) -> void:
	if not timer.is_stopped():
		timer.stop()


func on_focus_lost() -> void:
	await get_tree().process_frame # Wait to see who grabs focus
	if not auto_fill.has_focus() and auto_container.visible:
		auto_container.hide()


func on_text_changed(_ignored: String) -> void:
	if not Tagger.autofill_enabled:
		return
	
	if auto_container.visible:
		auto_container.hide()
	
	timer.start()


func on_timer_ended() -> void:
	var tag_to_search: String = text.strip_edges().to_lower()
	if tag_to_search.is_empty():
		auto_fill.clear()
		return
	
	var tags_found: Array[String] = Tagger.search_local(tag_to_search, 10)
	
	auto_fill.clear()

	for item in tags_found:
		auto_fill.add_item(item)
	
	if 0 < tags_found.size():
		auto_container.show()


func _gui_input(event):
	if has_focus() and event.is_action(\"ui_up\") and 0 < auto_fill.item_count:
		auto_container.show()
		auto_fill.select(auto_fill.item_count - 1)
		auto_fill.grab_focus()

"

[sub_resource type="GDScript" id="GDScript_2rgqx"]
resource_name = "template_sug_autofill"
script/source = "extends ItemList


signal item_submited(item_text: String)


@onready var add_tag: LineEdit = $\"../..\"
@onready var container = $\"..\"


func _ready():
	container.hide()
	focus_exited.connect(on_focus_exited)
	item_clicked.connect(on_item_clicked)
	item_activated.connect(on_item_activated)


# Called when the node enters the scene tree for the first time.
func _gui_input(_event):
	if has_focus() and Input.is_action_just_pressed(\"ui_focus_next\") and is_anything_selected():
		add_tag.text = get_item_text(
			get_selected_items()[0]
		)
		add_tag.caret_column = add_tag.text.length()


func on_item_clicked(index: int, _at_position: Vector2, mouse_button_index: int):
	if mouse_button_index == MOUSE_BUTTON_LEFT:
		item_submited.emit(get_item_text(index))


func on_item_activated(item_index: int) -> void:
	item_submited.emit(get_item_text(item_index))
	add_tag.grab_focus()


func on_focus_exited():
	container.hide()
"

[node name="ToolTemplates" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sj5k")

[node name="BackgroundColor" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.227451, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
text = "Template Name"

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2
text = "Template Description"
horizontal_alignment = 1

[node name="DescTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TemplateTags" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 18

[node name="NormalContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer"]
layout_mode = 2
text = "Tags"
horizontal_alignment = 1

[node name="NomalTagsItem" type="ItemList" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_extqk")

[node name="InputContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TagsLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
script = SubResource("GDScript_a4o42")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer/InputContainer/TagsLineEdit"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -350.0
grow_horizontal = 2
mouse_filter = 2
alignment = 2

[node name="AutoFill" type="ItemList" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer/InputContainer/TagsLineEdit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../..")
focus_next = NodePath("../..")
focus_previous = NodePath("../..")
mouse_filter = 1
theme = ExtResource("3_v5p41")
auto_height = true
script = SubResource("GDScript_uypqb")

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer/InputContainer/TagsLineEdit"]

[node name="AddTagButton" type="Button" parent="MarginContainer/VBoxContainer/TemplateTags/NormalContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Add"

[node name="SuggestionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer"]
layout_mode = 2
text = "Suggestions"
horizontal_alignment = 1

[node name="Suggestions" type="ItemList" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_extqk")

[node name="InputContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SuggestionsLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
script = SubResource("GDScript_aj43q")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer/InputContainer/SuggestionsLineEdit"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -350.0
grow_horizontal = 2
mouse_filter = 2
alignment = 2

[node name="AutoFill" type="ItemList" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer/InputContainer/SuggestionsLineEdit/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../..")
focus_next = NodePath("../..")
focus_previous = NodePath("../..")
mouse_filter = 1
theme = ExtResource("3_v5p41")
auto_height = true
script = SubResource("GDScript_2rgqx")

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer/InputContainer/SuggestionsLineEdit"]

[node name="AddSuggestionButton" type="Button" parent="MarginContainer/VBoxContainer/TemplateTags/SuggestionsContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Add"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Template"
